--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
 
 header {
-  border-bottom: 2px solid green;
+  border-bottom: 2px solid blue;
   margin-bottom: 3%;
 }
 
